--- a/src/main/resources/net/weesli/windowsschoolapplication/main.fxml
+++ b/src/main/resources/net/weesli/windowsschoolapplication/main.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<VBox fx:id="background" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: black;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="net.weesli.windowsschoolapplication.HelloController">
+<VBox fx:id="background" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: black;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="net.weesli.windowsschoolapplication.Controller">
     <Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="210.0" prefWidth="162.0" style="-fx-background-color: white;">
         <Label fx:id="title" layoutX="1.0" layoutY="7.0" prefHeight="25.0" prefWidth="162.0" style="-fx-background-color: red;" text="GIRIS KODU : &lt;code&gt;" />
         <Button fx:id="one" layoutX="27.0" layoutY="70.0" mnemonicParsing="false" onMouseClicked="#one" prefHeight="25.0" prefWidth="28.0" text="1" />
